[metadata]
name = numintegrator
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = Numerical integrators for solving differential equations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/numintegrator
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/numintegrator/issues
license = GNU AFFERO GENERAL PUBLIC LICENSE
license_file = LICENSE
platform = any
keywords = numerical integration, integrator, differential equations, ODE, initial value problem
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU AFFERO GENERAL PUBLIC LICENSE
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
include_package_data = true

[options.packages.find]
where = .