[metadata]
name = numintegrator
version = 0.0.0
author = Armin Ariamajd
author_email = a.ariamajd@gmail.com
description = Numerical integrators for solving differential equations.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Armin-Ariamajd/numintegrator
project_urls =
    Bug Tracker = https://github.com/Armin-Ariamajd/numintegrator/issues
license = GNU Affero General Public License v3
license_file = LICENSE
platform = any
keywords = numerical integration, integrator, differential equations, ordinary differential equations, ODE, partial differential equations, PDE, initial value problem, Runge–Kutta methods, linear multistep methods, symplectic integrators, Explicit integrator, Implicit integrator, Euler, Verlet, Velocity Verlet, Heun, Leapfrog, Yoshida, Crank-Nicolson, Midpoint rule
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Affero General Public License v3
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Intended Audience :: Education
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Physics
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires = numpy>=1.17
include_package_data = true

[options.packages.find]
where = .